# Lunia-Whatsapp-Agent

./: .env.example  .env_example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  test_session_fix.py  whatsapp_client.py
.github/workflows/: ci.yml
app/: main.py
data/lunia_info/: about.txt  faq.txt  services.txt
deploy/: .env.production  .env.production.template  deploy.sh  production.py
docs/course/module1/: 01_introduction_to_programming.md  02_basic_programming_concepts.md  03_introduction_to_python.md  04_setting_up_python_environment.md
docs/course/module2/: 01_what_is_oop.md  02_classes_and_objects.md  03_encapsulation.md  (+3 more)
monitoring/: prometheus.yml
scripts/: init.sql  run_server.py  setup.py  setup_ssl.sh  start_server.py  test_simulation.py
src/: __init__.py
src/agents/: lunia_agent_enhanced.py
src/api/: main.py
src/core/: config.py  logger.py
src/models/: schemas.py
src/security/: middleware.py
src/services/: agent_service_integration.py  calendar_service.py  email_service.py  knowledge_base.py  performance_monitor.py  session_manager.py  supabase_service.py  supabase_session_manager.py  whatsapp_service_backup.py  whatsapp_service_clean.py  whatsapp_service_enhanced.py  whatsapp_service_fixed.py
src/utils/: helpers.py  http_client.py  text_utils.py
tests/: integration_test.py  quick_test.py  simple_test_runner.py  test_complete_system.py
tests/e2e/: test_complete_flow.py
tests/unit/: test_agent_service_integration.py  test_calendar_service.py  test_email_service.py  test_session_manager.py  test_supabase_service.py  test_whatsapp_service.py  test_whatsapp_service_enhanced.py
(+20 files in other folders)
