[tool.poetry]
name = "lunia-whatsapp-agent"
version = "0.1.0"
description = "WhatsApp agent for Lunia Soluciones"
authors = ["Your Name <you@example.com>"]
readme = "README.md" # Assuming README.md is in /app
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.25"
langgraph = "^0.4.8"
python-dotenv = "^1.1.0"
llama-index-core = "^0.12.40"
llama-index-llms-openai = "^0.4.3"
llama-index-embeddings-openai = "^0.3.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
