[tool.poetry]
name = "lunia-whatsapp-agent"
version = "0.1.0"
description = "WhatsApp agent for Lunia Soluciones"
authors = ["Your Name <you@example.com>"]
readme = "README.md" # Assuming README.md is in /app
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.25"
langchain-core = "^0.3.10"
langchain-openai = "^0.2.1"
langgraph = "^0.4.8"
python-dotenv = "^1.1.0"
llama-index = "^0.12.40"
llama-index-core = "^0.12.40"
llama-index-llms-openai = "^0.4.3"
llama-index-embeddings-openai = "^0.3.1"
llama-index-readers-file = "^0.4.0"
requests = "^2.32.3"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
openai = "^1.48.0"
pydantic = "^2.10.0"
aiofiles = "^24.1.0"
httpx = "^0.27.0"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.12.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
